# XELFViewer

./: .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  REPLACE_PI_TO_3.14.CPP  SUBARRAYTOASCII.CPP  THANKS.md  addition.cpp  agecalculator.py  alarm_clock.py  array_inverse.cpp  bmi_calculator  build_dpkg.sh  build_lin64.sh  build_mac.sh  build_msvc_win32.bat  build_msvc_win64.bat  build_msvc_winxp.bat  build_win32.bat  build_win64.bat  build_win_generic.cmd  build_winxp.bat  calculator.py  changelog.txt  configure  configure.ac  create_appimage.sh  dice_rolling_simulator.py  division.cpp  factorial.js  factorial.py  global.h  install.iss  install.sh  multiplication.cpp  password.py  release_version.txt  smallest_number.py  snakegame.py  (+3 more)
DEBIAN/: xelfviewer.desktop
LINUX/: control  xelfviewer.desktop
docs/: BUILD.md  RUN.md
gui_source/: CMakeLists.txt  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  gui_source.pro  gui_source_tr.pro  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp  rsrc.qrc
gui_source/translation/: xelfviewer_ar.ts  xelfviewer_de.ts  xelfviewer_es.ts  xelfviewer_fr.ts  xelfviewer_he.ts  xelfviewer_id.ts  xelfviewer_it.ts  xelfviewer_ja.ts  xelfviewer_ko.ts  xelfviewer_pl.ts  xelfviewer_pt_BR.ts  xelfviewer_pt_PT.ts  xelfviewer_ru.ts  xelfviewer_tr.ts  xelfviewer_uk.ts  xelfviewer_vi.ts  xelfviewer_zh.ts  xelfviewer_zh_TW.ts
icons/: main.icns
winloader_source/: winloader.cpp
